--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 telegram_bot=5240708876:AAFBDos_wKmKmb5QJfMy_pCLAsBjK-0HY5Q
 APP_ID=19252979
 API_HASH=493b3537628ebd206b0c18af5a25f6d0
-canal=-749133955
+canal=-1001587852712
 
 
 ## login quotex
@@ -10,7 +10,7 @@ login=picadeiroencantadosax@gmail.com
 senha=12341234
 
 ## token
-ssid='rvH64IdDJ85ZEksOkwxTd4APAFQpYBC38iNJzBdj'
+ssid='JHFXJGOoWmBVblxvXx8Y8BFdtFzW3MbgmHuhryCe'
 
 ## timeframe em segundos (candle. 60 = 1 minuto)
 intervalo=60 
@@ -19,6 +19,12 @@ intervalo=60
 ## tempo de expiração em segundos (60 = 1 minuto)
 expiracao=60
 ## (para fins de testes, o bot estará fixado em 60)
+
+## multiplicador gales (utilizar sempre . para separar a casa decimal)
+multiplicadorgale=2.0
+
+## multiplicador ciclos (utilizar sempre . para separar a casa decimal)
+multiplicadorciclo=1.5
 
 ## valor da aposta
 entrada=5
